# sitbrain-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example_structure.md  gradio_app.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: main.py
app/api/v1/routes/: chat.py  document.py
app/core/: config.py  prompts.py  service_manager.py
app/schemas/: chat.py  documents.py
app/services/: chat_service.py  document_service.py  embeddings_service.py  llm_service.py  qdrant_vector_store.py
app/utils/: logger.py
notebooks/: test_document_service.ipynb
test/: test_document_api.py  test_document_service.py
